fix: Vulnerabilities